<resources>
    <string name="app_name">Rb Share VPN</string>
    <string name="developed_by" translatable="false">Copyright © by IndraTech</string>
    <string name="admob_app_ads_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="facebook_banner_ads_id" translatable="false">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string name="Applovin_SDK_Key">NtsqGruFC4wlJiADLZpxUA9_BFzMRQcNfWy8z2HL_eiNSOKUmU1BAxWPo8onVIhE6PArQavprDKb0bl2XSxOTE</string>
    <string name="account_enter_email">Email</string>
    <string name="account_password">Password</string>
    <string name="account_login">sign in</string>
    <string name="account_signup">SignUp</string>
    <string name="forgot_passw">Forgot Password</string>
    <string name="share_text">I have earned more than $2500,you can also earn by installing this app and by using VPN,and for get instant more coin,use my refer code </string>
    <string name="app_you_are_blocked">!! Blocked !! We regret to inform you, your account is blocked, for more information , kindly contact us </string>
    <string name="internet_connection_of_text">It look like , you have not connected to Internet. </string>
    <string name="internet_connection_slow">It look like , you are using too slow Internet.</string>
    <string name="you_win">Congratulation </string>
    <string name="cancel_text">Cancel</string>
    <string name="account_add_to_wallet">Add</string>
    <string name="ok_text">OK</string>
    <string name="redeem_tag_line_1">Are You confirm ! to Redeem your points ?</string>
    <string name="signup_enter_valid_email">Put correct Email</string>
    <string name="signup_enter_password">Put Password</string>
    <string name="signup_enter_valid_password">Put 6 digit password</string>
    <string name="signup_enter_name">Enter Name</string>
    <string name="signup_enter_number">Enter Number</string>
    <string name="registration_success">Signup Successfully…</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signup_enter_refer_code">Referral Code (optional)</string>
    <string name="today_work_is_over">Today\'s Work is over, try Again Tomorrow</string>
    <string name="better_luck_next_time">Better Luck Next Time</string>
    <string name="app_login_successfully">Sign in Successfully…</string>
    <string name="account_reset_password">Reset now</string>
    <string name="reset_pass">Change Password</string>
    <string name="exit_text">Do you want exit the app ?</string>
    <string name="logout_text">Do you want logout from "%s"?</string>
    <string name="email_title">Tile</string>
    <string name="send_message">Write your Message</string>
    <string name="app_refer">Share this code and earn coins for every referral</string>
    <string name="app_invite">Share</string>
    <string name="account_resend_otp">Did not get OTP? click to Resend</string>
    <string name="account_profile">Profile</string>
    <string name="account_update_profile">save</string>
    <string name="account_incomplete_profile">Your Profile is Incomplete please update your Profile</string>
    <string name="account_update_successfully">Updated Successfully</string>
    <string name="account_login_first">Sign in for use the app</string>
    <string name="account_total_available_point">Total Available Points</string>
    <string name="menu_my_wallet">My Wallet</string>
    <string name="enter_points">Enter yourPoints</string>
    <string name="submit">Submit</string>
    <string name="today_checkin_over">You have already reached your daily limit to collect this reward, please come back tomorrow</string>
    <string name="redeem_successfully">Redeem Successfully</string>
    <string name="vpn_check_text">Please Connect Vpn And Try Again</string>
    <string name="your_refer_code">Your Referral Code</string>
    <string name="tap_copy">Tap to copy</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="position">Position</string>
    <string name="user_name">User Name</string>
    <string name="leader_winner">Winner</string>
    <string name="account_enter_new_password">Enter New Password</string>
    <string name="change_password">Submit</string>
    <string name="nav_home">Home</string>
    <string name="nav_challenges">Earn more</string>
    <string name="nav_Setting">Setting</string>
    <string name="nav_video">Videos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_spin" translatable="false">Lucky Spin</string>
    <string name="spin_and_win" translatable="false">Spin And Win Coin</string>
    <string name="scratch_win" translatable="false">Scratch Win</string>
    <string name="scratch_win_diamod" translatable="false">Scratch And Win Diamond</string>
    <string name="profile_sub" translatable="false">Click To Your profile</string>
    <string name="splash_screen_welcome" translatable="false">Protect your Online Privacy with Unmetered Bandwith\nEarn Coins</string>
    <string name="collect_reward">Get Reward</string>
    <string name="gold_reward">Instant Reward</string>
    <string name="king_pot">Money Pot</string>
    <string name="pay_earn_gift">Earn Gift</string>
    <string name="daily_checking">Daily check-in</string>
    <string name="everyday_gifts">Today Gifts</string>
    <string name="watch_video">Watch Video</string>
    <string name="complete_challenge">Complete Challenges</string>
    <string name="open_reward">Reward</string>
    <string name="scratch_to_win">Scratch Cards</string>
    <string name="tic_tac">Tic Tac </string>
    <string name="premium_plans">Premium Plans</string>
    <string name="bottom_text">To get additional coins, please go back and try other options</string>
    <string name="click_to_earn_more_coins">Open to earn coins</string>
    <string name="click_to_earn_vpn">Open to VPN</string>
    <string name="click_check_coins">Open this to check your coin balance</string>
    <string name="tic_tac_earn_coins">Play Tic Tac to earn coins</string>
    <string name="scratch_earn_coins">Open to scratch cards for coins</string>
    <string name="watch_videos_earn_coins">Watch videos to earn coins</string>
    <string name="complete_challenges_earn_coins">Complete challenges to earn coins</string>
    <string name="buy_premium">Open this to buy premium plans</string>
    <string name="adds_warning">Ad</string>
    <string name="go_to">Go to</string>
    <string name="survey_received">Pollfish Survey Received</string>
    <string name="getting_offers">Getting\nOffers</string>
    <string name="show_offer_wall">Show\n Offer Wall</string>
    <string name="win_coins">%1$d</string>
    <string name="adds_video_unavailable">Today video is not available.</string>
    <string name="complete_survey">Complete Survey</string>
    <string name="login_text"><u>I already have an account , login</u></string>
    <string name="Extra_Scratch">Extra Scratch</string>
    <string name="Additional_Scratch">Additional Scratch</string>
    <string name="Great_Scratch">Great Scratch</string>
    <string name="Wallet">Wallet</string>
    <string name="todo">todo</string>
    <string name="already_have_account">Already Have Account ?</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="referCode">Referral Code (optional)</string>
    <string name="enter_6_digit_password">Enter 6 or More Digit Password</string>
    <string name="Redeem">Redeem</string>
    <string name="enter_correct_points">Enter Correct Points</string>
    <string name="in_progress">In Progress</string>
    <string name="enter_ff_id">Enter Free Fire ID</string>
    <string name="FF_payment_1_Coin">15000</string>
    <string name="FF_payment_1_D">150 Diamond</string>
    <string name="FF_payment_2_Coin">20000</string>
    <string name="FF_payment_2_D">200 Diamond</string>
    <string name="FF_payment_3_Coin">25000</string>
    <string name="FF_payment_3_D">250 Diamond</string>
    <string name="FF_payment_4_Coin">30000</string>
    <string name="FF_payment_4_D">300 Diamond</string>
    <string name="enter_Pubg_id">Enter Pubg ID</string>
    <string name="Pubg_payment_1_Coin">15000</string>
    <string name="Pubg_payment_1_D">150 UC</string>
    <string name="Pubg_payment_2_Coin">25000</string>
    <string name="Pubg_payment_2_D">250 UC</string>
    <string name="title_contact">If you have any suggestion or feedback or any issue, kindly write your issue.</string>
    <string name="enter_number_digit">Enter number</string>
    <string name="contact_us">Contact Us</string>
    <string name="send_now">Submit</string>
    <string name="you_can_t_change_email">You can\'t Change Email</string>
    <string name="welcome_to">Welcome to</string>
    <string name="refer">Refer to your friends and get more coin</string>
    <string name="refer_your_friends">Refer to your friends and get more coin</string>
    <string name="click_to_check_daily_coin">Click To check Daily Coin</string>
    <string name="tic_tac_toe">Tic Tac </string>
    <string name="gift_card">Gift Card</string>
    <string name="chances_left">Chances Left</string>
    <string name="dot">--</string>
    <string name="available_balance">Available Balance</string>
    <string name="date">07/17/2023</string>
    <string name="point">+100</string>
    <string name="date_formet">yyyy/MM/dd</string>
    <string name="Extra_Bonus">Extra Bonus</string>
    <string name="Extra_points">Extra Points</string>
    <string name="watch_great">Watch Great \nExtra Points</string>
    <string name="Profile">Profile</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="enter_account_id">Enter Payment Details</string>
    <string name="vpn_subtext">open this to use vpn service</string>
    <string name="vpn">VPN</string>
    <string name="servers">Servers</string>
    <string name="purchase">Premium</string>
    <string name="choose_server">Choose Server</string>
    <string name="tasks_description">Tasks Description</string>
    <string name="connection_close_confirm">Would you like to cancel the current VPN Connection?</string>
    <string name="banner_premium_packages">Premium Membership</string>
    <string name="banner_description">Buy the premium Plan and Get Ride of the\nFastest Servers in the world and remove ads.</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>