<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginBottom="32dp">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/vpn_icon"
        android:text="@string/banner_premium_packages"
        android:gravity="center"
        android:layout_gravity="center"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/campton_bold"
        android:text="@string/banner_premium_packages"
        android:gravity="center"
        android:textFontWeight="700"
        android:textStyle="bold"
        android:textSize="24sp"
        tools:targetApi="p" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:fontFamily="@font/campton_bold"
        android:text="@string/banner_description"
        android:textColor="@color/white_50"
        android:textSize="14sp" />

</LinearLayout>