<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/newHomeFragment"
            android:title="Home"
            android:icon="@drawable/ic_home" />
        <item
            android:id="@+id/webViewGoogle"
            android:icon="@drawable/ic_privacy"
            android:title="Open Browser" />
        <!--        <item-->
        <!--            android:id="@+id/challengesFragment"-->
        <!--            android:icon="@drawable/ic_baseline_star_rate"-->
        <!--            android:title="Challenges"/>-->
        <!--        <item-->
        <!--            android:id="@+id/videoAdsFragment"-->
        <!--            android:icon="@drawable/video_ic"-->
        <!--            android:title="Videos"/>-->
        <item
            android:id="@+id/newProfileFragment"
            android:title="Profile"
            android:icon="@drawable/ic_profile" />
        <item
            android:id="@+id/leaderBoard"
            android:icon="@drawable/ic_profile"
            android:title="@string/leaderboard" />
        <item
            android:id="@+id/wallet"
            android:icon="@drawable/ic_wallet"
            android:title="@string/menu_my_wallet" />
        <item
            android:id="@+id/forgotPasswordActivity"
            android:icon="@drawable/ic_password_my"
            android:title="@string/reset_pass" />
        <item
            android:id="@+id/contactUs"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/webView"
            android:icon="@drawable/ic_privacy"
            android:title="Privacy Policy" />
        <item
            android:id="@+id/termCondition"
            android:icon="@drawable/ic_article"
            android:title="Term and Condition" />
        <item
            android:id="@+id/referAndEarn"
            android:icon="@drawable/affiliate_marketing"
            android:title="Refer &amp; Earn" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_share"
            android:title="Share App" />
    </group>
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_power"
            android:visible="false"
            android:title="Logout"/>
    </group>
</menu>