<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CustomCard.Container"
    app:cardCornerRadius="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingVertical="32dp"
        android:paddingHorizontal="24dp">

        <TextView
            android:id="@+id/exitText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_4sdp"
            android:fontFamily="@font/cantata_one"
            android:gravity="center"
            android:text="@string/exit_text"
            android:textSize="@dimen/_14ssp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/noExit"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:background="@drawable/button_dialog_error"
                android:text="@string/no"
                android:layout_weight="1"
                android:textAllCaps="false"
                style="@style/SpecialButton" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="12dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/yesExit"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/yes"
                android:background="@drawable/button_dialog_main"
                style="@style/SpecialButton"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>