<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CustomCard.Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="32dp">

        <ImageView
            android:id="@+id/points_image"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:scaleType="center"
            android:scaleY="@integer/com_startapp_sdk_aar"
            android:src="@drawable/banner_gif"
            android:visibility="gone" />


        <TextView
            android:id="@+id/title_text_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/cantata_one"
            android:gravity="center"
            android:text="@string/vpn_check_text"
            android:textAlignment="center"
            android:textSize="@dimen/_14ssp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_btn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_4sdp"
                android:background="@drawable/button_dialog_error"
                android:text="@string/cancel_text"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_btn"
                style="@style/SpecialButton"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_4sdp"
                android:background="@drawable/round_btn"
                android:text="@string/account_add_to_wallet" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>