<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ntarevpn.rbpessacash.activity.ExtraScratch">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:elevation="2dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white" />


    <androidx.cardview.widget.CardView
        android:id="@+id/TopSection"
        android:layout_width="match_parent"
        android:layout_height="199dp"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/banner_gif_left"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/available_balance"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Balance_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center|bottom"
                    android:text="@string/dot"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Chances"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|top"
                    android:text="@string/chances_left"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/limit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center|bottom"
                    android:text="@string/dot"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginTop="-15dp"
                android:gravity=""
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/text_view_date_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center|left"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TopSection"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/_4sdp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="40dp"
            app:cardElevation="3dp">


            <dev.skymansandy.scratchcardlayout.ui.ScratchCardLayout
                android:id="@+id/scratch_view_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/CustomCard.Container"
                app:scratchDrawable="@drawable/banner_gif"
                app:scratchEnabled="true"
                app:scratchRevealFullAtPercent="40"
                app:scratchWidth="60dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/medal"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_4sdp"
                        android:fontFamily="@font/carter_one"
                        android:gravity="center"
                        android:text="@string/you_win"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:id="@+id/textView_points_show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/carter_one"
                        android:gravity="center"
                        android:text="@string/point"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

            </dev.skymansandy.scratchcardlayout.ui.ScratchCardLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/banner_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent" />

    </LinearLayout>
</RelativeLayout>