<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CustomCard.Container"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingVertical="32dp"
        android:paddingHorizontal="24dp">

        <ImageView
            android:id="@+id/points_image"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:scaleType="center"
            android:scaleY="@integer/com_startapp_sdk_aar"
            android:visibility="gone"
            android:src="@drawable/banner_gif" />


        <TextView
            android:id="@+id/title_text_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_4sdp"
            android:fontFamily="@font/cantata_one"
            android:gravity="center"
            android:text="@string/you_win"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_4sdp"
            android:gravity="center"
            tools:text="520"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:background="@drawable/button_dialog_error"
                android:text="@string/cancel_text"
                android:layout_weight="1"
                android:textAllCaps="false"
                style="@style/SpecialButton"
                android:visibility="gone" />

            <View
                android:id="@+id/pointsDivider"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="12dp"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_btn"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/account_add_to_wallet"
                android:background="@drawable/button_dialog_main"
                style="@style/SpecialButton"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>